--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -2310,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -2395,7 +2395,7 @@
        "7     Lucia  24.0"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2517,7 @@
        "7     Lucia  24.0        normal"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2528,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
        "7     Lucia  24.0        normal      saudavel"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2653,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -2670,7 +2670,7 @@
        "Name: imc, dtype: float64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -2695,7 +2695,7 @@
        "Name: imc, dtype: float64"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2706,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2718,7 +2718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -2830,7 +2830,7 @@
        "7     Lucia  24.0        normal      saudavel  3o_quartil"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2848,10 +2848,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nao_saudavel</th>\n",
+       "      <th>saudavel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   nao_saudavel  saudavel\n",
+       "0             1         0\n",
+       "1             1         0\n",
+       "2             1         0\n",
+       "3             1         0\n",
+       "4             1         0\n",
+       "5             1         0\n",
+       "6             0         1\n",
+       "7             0         1"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cria novas colunas a partir das variáveis categoricas\n",
+    "pd.get_dummies(df_imc['imc_cat_2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>abaixo</th>\n",
+       "      <th>acima</th>\n",
+       "      <th>muito_abaixo</th>\n",
+       "      <th>normal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   abaixo  acima  muito_abaixo  normal\n",
+       "0       0      1             0       0\n",
+       "1       0      1             0       0\n",
+       "2       0      1             0       0\n",
+       "3       0      0             1       0\n",
+       "4       0      0             1       0\n",
+       "5       1      0             0       0\n",
+       "6       0      0             0       1\n",
+       "7       0      0             0       1"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummies = pd.get_dummies(df_imc['imc_cat'])\n",
+    "dummies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# inserindo as novas colunas criadas no dataframe\n",
+    "df_imc = pd.concat([df_imc, dummies], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome</th>\n",
+       "      <th>imc</th>\n",
+       "      <th>imc_cat</th>\n",
+       "      <th>imc_cat_2</th>\n",
+       "      <th>imc_cat_3</th>\n",
+       "      <th>abaixo</th>\n",
+       "      <th>acima</th>\n",
+       "      <th>muito_abaixo</th>\n",
+       "      <th>normal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fernando</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>4o_quartil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maria</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>4o_quartil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Felipe</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>3o_quartil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>1o_quartil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bianca</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>1o_quartil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Beatriz</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>2o_quartil</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>saudavel</td>\n",
+       "      <td>2o_quartil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Lucia</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>saudavel</td>\n",
+       "      <td>3o_quartil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       nome   imc       imc_cat     imc_cat_2   imc_cat_3  abaixo  acima  \\\n",
+       "0  Fernando  27.0         acima  nao_saudavel  4o_quartil       0      1   \n",
+       "1     Maria  26.0         acima  nao_saudavel  4o_quartil       0      1   \n",
+       "2    Felipe  25.0         acima  nao_saudavel  3o_quartil       0      1   \n",
+       "3     Pedro  16.0  muito_abaixo  nao_saudavel  1o_quartil       0      0   \n",
+       "4    Bianca  16.7  muito_abaixo  nao_saudavel  1o_quartil       0      0   \n",
+       "5   Beatriz  17.5        abaixo  nao_saudavel  2o_quartil       1      0   \n",
+       "6  Patricia  18.6        normal      saudavel  2o_quartil       0      0   \n",
+       "7     Lucia  24.0        normal      saudavel  3o_quartil       0      0   \n",
+       "\n",
+       "   muito_abaixo  normal  \n",
+       "0             0       0  \n",
+       "1             0       0  \n",
+       "2             0       0  \n",
+       "3             1       0  \n",
+       "4             1       0  \n",
+       "5             0       0  \n",
+       "6             0       1  \n",
+       "7             0       1  "
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_imc"
+   ]
   }
  ],
  "metadata": {
