--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
@@ -43,18 +43,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(27028, 69)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(27028, 69)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
     "\n",
     "# 1) seu código aqui\n",
-    "sinasc = pd.read_csv('SINASC_RO_2019.csv')\n",
+    "sinasc = pd.read_csv('./input/SINASC_RO_2019.csv')\n",
     "print(sinasc.shape)\n",
-    "sinasc.drop_duplicates().shape\n",
-    "# Não há duplicados"
+    "\n",
+    "# Não há duplicados (removendo dados duplicados)\n",
+    "sinasc.drop_duplicates().shape"
    ]
   },
   {
@@ -132,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +165,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
