--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "(27028, 69)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,56 +78,442 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ORIGEM          0\n",
+       "CODESTAB      115\n",
+       "CODMUNNASC      0\n",
+       "LOCNASC         0\n",
+       "IDADEMAE        0\n",
+       "             ... \n",
+       "munResUf        0\n",
+       "munResLat       1\n",
+       "munResLon       1\n",
+       "munResAlt       1\n",
+       "munResArea      1\n",
+       "Length: 69, dtype: int64"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2) seu código aqui\n"
+    "# 2) seu código aqui\n",
+    "sinasc.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ORIGEM        0.000000\n",
+       "CODESTAB      0.004255\n",
+       "CODMUNNASC    0.000000\n",
+       "LOCNASC       0.000000\n",
+       "IDADEMAE      0.000000\n",
+       "                ...   \n",
+       "munResUf      0.000000\n",
+       "munResLat     0.000037\n",
+       "munResLon     0.000037\n",
+       "munResAlt     0.000037\n",
+       "munResArea    0.000037\n",
+       "Length: 69, dtype: float64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3) seu código aqui\n"
+    "# Porcentagem de valores faltantes em cada coluna\n",
+    "sinasc.isna().sum() / len(sinasc.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LOCNASC          0\n",
+       "IDADEMAE         0\n",
+       "ESTCIVMAE      317\n",
+       "ESCMAE         312\n",
+       "QTDFILVIVO    1573\n",
+       "GESTACAO      1232\n",
+       "GRAVIDEZ        79\n",
+       "CONSULTAS        0\n",
+       "APGAR5         103\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4) seu código aqui\n"
+    "# 3) seu código aqui\n",
+    "select_columns = [\n",
+    "    'LOCNASC', \n",
+    "    'IDADEMAE', \n",
+    "    'ESTCIVMAE', \n",
+    "    'ESCMAE', \n",
+    "    'QTDFILVIVO', \n",
+    "    'GESTACAO', \n",
+    "    'GRAVIDEZ', \n",
+    "    'CONSULTAS', \n",
+    "    'APGAR5'\n",
+    "]\n",
+    "\n",
+    "sinasc_new = sinasc[select_columns]\n",
+    "sinasc_new\n",
+    "\n",
+    "# count missing values\n",
+    "sinasc_new.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LOCNASC          0\n",
+       "IDADEMAE         0\n",
+       "ESTCIVMAE      315\n",
+       "ESCMAE         310\n",
+       "QTDFILVIVO    1566\n",
+       "GESTACAO      1216\n",
+       "GRAVIDEZ        76\n",
+       "CONSULTAS        0\n",
+       "APGAR5           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 5) seu código aqui\n"
+    "# 4) seu código aqui\n",
+    "# novo dataset sem as linhas onde o valor da coluna APGAR5 é NaN\n",
+    "sinasc2 = sinasc_new[~sinasc_new.APGAR5.isna()]\n",
+    "\n",
+    "sinasc2.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/wh/_2xtz5kd2knd10y0m8tmqhrc0000gp/T/ipykernel_16688/1271557862.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  sinasc2['ESTCIVMAE'].fillna(9, inplace=True)\n",
+      "/var/folders/wh/_2xtz5kd2knd10y0m8tmqhrc0000gp/T/ipykernel_16688/1271557862.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  sinasc2['CONSULTAS'].fillna(9, inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LOCNASC          0\n",
+       "IDADEMAE         0\n",
+       "ESTCIVMAE        0\n",
+       "ESCMAE         310\n",
+       "QTDFILVIVO    1566\n",
+       "GESTACAO      1216\n",
+       "GRAVIDEZ        76\n",
+       "CONSULTAS        0\n",
+       "APGAR5           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 6) Seu código aqui\n"
+    "# 5) seu código aqui\n",
+    "sinasc2.head()\n",
+    "sinasc2['ESTCIVMAE'].fillna(9, inplace=True)\n",
+    "sinasc2['CONSULTAS'].fillna(9, inplace=True)\n",
+    "\n",
+    "sinasc2.isna().sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/wh/_2xtz5kd2knd10y0m8tmqhrc0000gp/T/ipykernel_16688/480345016.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  sinasc2['QTDFILVIVO'].fillna(0.0, inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "26925"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 7) seu código aqui\n"
+    "# 6) Seu código aqui\n",
+    "sinasc2['QTDFILVIVO'].fillna(0.0, inplace=True)\n",
+    "sinasc2['QTDFILVIVO'].notnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26925, 9)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sinasc2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LOCNASC          0\n",
+       "IDADEMAE         0\n",
+       "ESTCIVMAE        0\n",
+       "ESCMAE         310\n",
+       "QTDFILVIVO       0\n",
+       "GESTACAO      1216\n",
+       "GRAVIDEZ        76\n",
+       "CONSULTAS        0\n",
+       "APGAR5           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7) seu código aqui\n",
+    "sinasc2.head()\n",
+    "\n",
+    "sinasc2.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ESCMAE</th>\n",
+       "      <th>GESTACAO</th>\n",
+       "      <th>GRAVIDEZ</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12 anos ou mais</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27023</th>\n",
+       "      <td>12 anos ou mais</td>\n",
+       "      <td>32 a 36 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27024</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27025</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27026</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>32 a 36 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27027</th>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26925 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ESCMAE         GESTACAO GRAVIDEZ\n",
+       "0          8 a 11 anos  37 a 41 semanas    Única\n",
+       "1          8 a 11 anos  37 a 41 semanas    Única\n",
+       "2          8 a 11 anos  37 a 41 semanas    Única\n",
+       "3      12 anos ou mais  37 a 41 semanas    Única\n",
+       "4          8 a 11 anos  37 a 41 semanas    Única\n",
+       "...                ...              ...      ...\n",
+       "27023  12 anos ou mais  32 a 36 semanas    Única\n",
+       "27024      8 a 11 anos  37 a 41 semanas    Única\n",
+       "27025      8 a 11 anos  37 a 41 semanas    Única\n",
+       "27026      8 a 11 anos  32 a 36 semanas    Única\n",
+       "27027      8 a 11 anos  37 a 41 semanas    Única\n",
+       "\n",
+       "[26925 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sinasc2[['ESCMAE', 'GESTACAO', 'GRAVIDEZ']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "False",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3620\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/_libs/index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/_libs/index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: False",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/raphaeloliveira/Galpao/DataScience/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/raphaeloliveira/Galpao/DataScience/EBAC%20Curso%20Ci%C3%AAncia%20de%20Dados/Cientista%20de%20Dados/modulo_5_exercicios.ipynb#ch0000014?line=0'>1</a>\u001b[0m nan_values \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mESCMAE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGESTACAO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGRAVIDEZ\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/raphaeloliveira/Galpao/DataScience/EBAC%20Curso%20Ci%C3%AAncia%20de%20Dados/Cientista%20de%20Dados/modulo_5_exercicios.ipynb#ch0000014?line=2'>3</a>\u001b[0m sinasc2[[nan_values[\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mNenhuma\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3623\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3624\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3625\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3626\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3627\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3628\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: False"
+     ]
+    }
+   ],
+   "source": [
+    "nan_values = ['ESCMAE', 'GESTACAO', 'GRAVIDEZ']\n",
+    "\n",
+    "sinasc2[[nan_values[0]] == 'Nenhuma']"
    ]
   },
   {
@@ -151,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
