exercício analise nascidos vivos

--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
@@ -554,13 +554,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Única' 'Dupla' nan 'Tríplice e mais']\n",
+      "Única              26356\n",
+      "Dupla                488\n",
+      "Tríplice e mais        5\n",
+      "Name: GRAVIDEZ, dtype: int64\n",
+      "Percentual de valores nulos -> 0.28 %\n"
+     ]
+    }
+   ],
    "source": [
-    "# sinasc2.isna().sum()\n",
+    "# como a porcentagem de dados nulos é menos de 1%\n",
+    "# e a probabilidade maior é que seja uma unica gravidez alterei \n",
+    "# os valores nulos para 'Única'\n",
+    "sinasc2['GRAVIDEZ'].unique()\n",
     "\n",
-    "# sinasc2['GRAVIDEZ'].unique()"
+    "sinasc2['GRAVIDEZ'].value_counts()\n",
+    "\n",
+    "percent_value = (sinasc2['GRAVIDEZ'].isna().sum() * 100) / sinasc2['GRAVIDEZ'].count()\n",
+    "percent_value\n",
+    "\n",
+    "print(sinasc2['GRAVIDEZ'].unique())\n",
+    "print(sinasc2['GRAVIDEZ'].value_counts())\n",
+    "print(\"Percentual de valores nulos -> {:.2f} %\".format(percent_value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/wh/_2xtz5kd2knd10y0m8tmqhrc0000gp/T/ipykernel_16688/3990895366.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  sinasc2['GRAVIDEZ'].fillna('Única', inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# alterado aqui\n",
+    "sinasc2['GRAVIDEZ'].fillna('Única', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LOCNASC       0\n",
+       "IDADEMAE      0\n",
+       "ESTCIVMAE     0\n",
+       "ESCMAE        0\n",
+       "QTDFILVIVO    0\n",
+       "GESTACAO      0\n",
+       "GRAVIDEZ      0\n",
+       "CONSULTAS     0\n",
+       "APGAR5        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sem valores nulos\n",
+    "sinasc2.isna().sum()"
    ]
   },
   {
