exercício analise nascidos vivos

--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
@@ -640,12 +640,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normal              26463\n",
+      "asfixia leve          320\n",
+      "asfixia severa         74\n",
+      "asfixia moderada       68\n",
+      "Name: apgar5_cat, dtype: int64\n",
+      "(26925, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8) seu código aqui\n",
+    "\n",
+    "sinasc2['APGAR5'].unique()\n",
+    "\n",
+    "sinasc2.loc[sinasc2['APGAR5'] <= 3.0, 'apgar5_cat'] = 'asfixia severa'\n",
+    "sinasc2.loc[(sinasc2['APGAR5'] > 3.0) & (sinasc2['APGAR5'] <= 5.0), 'apgar5_cat'] = 'asfixia moderada'\n",
+    "sinasc2.loc[(sinasc2['APGAR5'] > 5.0) & (sinasc2['APGAR5'] <= 7.0), 'apgar5_cat'] = 'asfixia leve'\n",
+    "sinasc2.loc[sinasc2['APGAR5'] > 7.0, 'apgar5_cat'] = 'normal'\n",
+    "\n",
+    "print(sinasc2['apgar5_cat'].value_counts())\n",
+    "print(sinasc2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 8) seu código aqui\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
